--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,6 +3,7 @@
   <head>
     <title>Daniel Castro:: developer</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link rel="stylesheet" href="/portfolio.css"
   </head>
 
   <body>
