--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -3,7 +3,9 @@
   <head>
     <title>Daniel Castro :: developer</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link rel="stylesheet" href="/portfolio.css"
+    <link rel="stylesheet" href="/portfolio.css">
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
   </head>
 
   <body>
@@ -35,11 +37,11 @@
       <br>
 
       <div class="contact" id="footer">
-        <h2>Work</h2>
+        <h2>Contact</h2>
         <ul>
-          <li><a>Linkedin</a></li>
-          <li><a>Twitter</a></li>
-          <li><a>GitHub</a></li>
+          <li><a href="https://twitter.com/dcastr0" class="twitter-follow-button" data-show-count="false">Follow @dcastr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
+          <li><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="daniel-castro-4b088aa3"><a class="LI-simple-link" href='https://www.linkedin.com/in/daniel-castro-4b088aa3?trk=profile-badge'>Daniel Castro</a></div></li>
+          <li><a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a></li>
         </ul>
       </div>
 
