--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -5,7 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/portfolio.css">
     <script async defer src="https://buttons.github.io/buttons.js"></script>
-    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+    <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -40,7 +40,7 @@
         <h2>Contact</h2>
         <ul>
           <li><a href="https://twitter.com/dcastr0" class="twitter-follow-button" data-show-count="false">Follow @dcastr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-          <li><div class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="daniel-castro-4b088aa3"><a class="LI-simple-link" href='https://www.linkedin.com/in/daniel-castro-4b088aa3?trk=profile-badge'>Daniel Castro</a></div></li>
+          <li><script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dandcastro" data-format="hover" data-related="false" data-text="Daniel Castro"></script></li>
           <li><a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a></li>
         </ul>
       </div>
