--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -1,48 +1,92 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   <head>
     <title>Daniel Castro :: developer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" href="/portfolio.css">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <div class="header">
-      <ul>
-        <li>Home</li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#footer">Contact</a></li>
-      </ul>
-    </div>
-
-    <div class="content" id="about">
-        <p>
-        <img class="img-circle" src="https://lh3.googleusercontent.com/hw-UIY3fRhoxyB4np8Rs5mOmmV0iVVKtnqUEslMVSP7ab1WAfksxRn7KpPYfLlWBtPzXX5F-y3-lhXxtwrAX6aVLPL2gOyA2Z5TS7ZdM4t-qk95g8LeqZQtD-FhqDj0NGrcbYcX8A1kMhvaocLofHja0WbO3Jg47kzAAEc7iXGWy_hBXq_sS1QZ-xRg4WtqHELB6ZgMwcHeZkq-dbF52B5lqhHrxawXPPKGAVbQybXB3_BqMgUzJq8dHnuTfQLZ04Lv7gR6K-A3qmN51-UfRYyEj4PXs0e4eB2Zu3rsbyBZuilzGCYO2uXAKB8mQDE83OpR29BxzlXJVUtYkqxHWujaxeckVgzLkQN12AsHwNa9szkIMIJMrIbBHGyx3AQ5HpZI2AK6ZSQKcJOCwDlZHZjswhlkjFpNkHGwXXQ4Ry_dWGXFjueSS6JcVpI9jrKQJDdlUsYhUp1UG8rctGEhb3tG6WS3CjTt0SJ1TB4Hh_JuyVbOxs1cbLvlZ5NCK4SBbJxxO-afiLgloJ2aiw2DHweyrF313KbEbfx3aTyb5opogWz_SfNmMtwLhOt9iRBmv7gJhsG4uC5RoRJXsBJkzZaF6fXN-TBCm-dgnvrOsVLze8OI_zE3f7Xl6UC5Uxu0M_fGiX96wNCfGlVfnF1hjWye9l7QN1xJ2ok-Zq9mc2A=w194-h224-no" alt="Profile pic">
-        You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out. Now, I don't know exactly when we turned on each other, but I know that seven of us survived the slide... and only five made it out. Now we took an oath, that I'm breaking now. We said we'd say it was the snow that killed the other two, but it wasn't. Nature is lethal but it doesn't hold a candle to man.</p>
-      </div>
-
-      <div class="samples" id="work">
-        <h2>Work</h2>
-        <ul>
-          <li><a id="one">Stuff # 1</a></li>
-          <li> <a id="two">Stuff #2</a></li>
-          <li><a id="three">Stuff #3</a></li>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">Daniel Castro</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#work">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
+    </nav>
 
-      <br>
-
-      <div class="contact" id="footer">
-        <h2>Contact</h2>
-        <ul>
-          <li><a href="https://twitter.com/dcstr0" class="twitter-follow-button" data-show-count="false">Follow @dcstr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script></li>
-          <li><script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dandcastro" data-format="click" data-related="false" data-text="Daniel Castro"></script></li>
-          <li><a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a></li>
-        </ul>
+    <div class="container-fluid bg-3 text-center" id="about">
+      <div class="row">
+        <div class="col-md-4">
+        <img class="img-circle img-responsive" src="https://lh3.googleusercontent.com/hw-UIY3fRhoxyB4np8Rs5mOmmV0iVVKtnqUEslMVSP7ab1WAfksxRn7KpPYfLlWBtPzXX5F-y3-lhXxtwrAX6aVLPL2gOyA2Z5TS7ZdM4t-qk95g8LeqZQtD-FhqDj0NGrcbYcX8A1kMhvaocLofHja0WbO3Jg47kzAAEc7iXGWy_hBXq_sS1QZ-xRg4WtqHELB6ZgMwcHeZkq-dbF52B5lqhHrxawXPPKGAVbQybXB3_BqMgUzJq8dHnuTfQLZ04Lv7gR6K-A3qmN51-UfRYyEj4PXs0e4eB2Zu3rsbyBZuilzGCYO2uXAKB8mQDE83OpR29BxzlXJVUtYkqxHWujaxeckVgzLkQN12AsHwNa9szkIMIJMrIbBHGyx3AQ5HpZI2AK6ZSQKcJOCwDlZHZjswhlkjFpNkHGwXXQ4Ry_dWGXFjueSS6JcVpI9jrKQJDdlUsYhUp1UG8rctGEhb3tG6WS3CjTt0SJ1TB4Hh_JuyVbOxs1cbLvlZ5NCK4SBbJxxO-afiLgloJ2aiw2DHweyrF313KbEbfx3aTyb5opogWz_SfNmMtwLhOt9iRBmv7gJhsG4uC5RoRJXsBJkzZaF6fXN-TBCm-dgnvrOsVLze8OI_zE3f7Xl6UC5Uxu0M_fGiX96wNCfGlVfnF1hjWye9l7QN1xJ2ok-Zq9mc2A=w194-h224-no" alt="Profile pic">
+        </div>
+        <div class="col-md-8">
+        <p class="lead about">
+        You like code. I like code. We all like code. <br>Ruby+Rails. Python+Django. HTML+CSS. JavaScript+jQuery.</p>
       </div>
+      </div>
+    </div><br><br>
+
+    <div class="container-fluid bg-3 text-center">
+      <h3 id="work">Work</h3><br>
+        <div class="row">
+          <div class="col-sm-3">
+
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+          </div>
+          <div class="col-sm-3">
+
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+          </div>
+          <div class="col-sm-3">
+
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+          </div>
+          <div class="col-sm-3">
+
+            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+          </div>
+        </div>
+    </div><br><br>
+
+    <div class="container-fluid bg-3 text-center">
+      <h3>Contact Me</h3><br>
+        <div class="row" id="contact">
+          <div class="col-sm-3">
+
+            <a href="https://twitter.com/dcstr0" class="twitter-follow-button" data-show-count="false">Follow @dcstr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+          <div class="col-sm-3">
+
+            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dandcastro" data-format="click" data-related="false" data-text="Daniel Castro"></script>
+          </div>
+          <div class="col-sm-3">
+
+            <a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a>
+          </div>
+          <div class="col-sm-3">
+            <div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/110453357014046634409" data-rel="author"></div>
+          </div>
+        </div>
+    </div><br><br>
+
+    <footer class="container-fluid text-center">
+       <p>&copy;2017</p>
+    </footer>
 
     </body>
 </html>
