--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col-sm-3">
 
-            <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
+            <a target="_blank" href="https://brushstroke.herokuapp.com"><img class="img-responsive" style="width:100%" src="images/brushstroke.png" alt="Art Site"></a>
           </div>
           <div class="col-sm-3">
 
