--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -46,7 +46,7 @@
         <div class="row">
           <div class="col-sm-3">
 
-            <a target="_blank" href="https://brushstroke.herokuapp.com"><img class="img-responsive" style="width:100%" src="images/brushstroke.png" alt="Art Site"></a>
+            <a target="_blank" href="https://brushstroke.herokuapp.com"><img class="img-responsive" style="width:100%" src="/images/brushstroke.png" alt="Art Site">Brushstroke</a>
           </div>
           <div class="col-sm-3">
 
