--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -28,7 +28,7 @@
       </div>
     </nav>
 
-    <div class="container-fluid bg-3 text-center" id="about">
+    <div class="me container-fluid bg-3 text-center" id="about">
       <div class="row">
         <div class="col-md-4">
         <img class="img-circle img-responsive" src="https://lh3.googleusercontent.com/hw-UIY3fRhoxyB4np8Rs5mOmmV0iVVKtnqUEslMVSP7ab1WAfksxRn7KpPYfLlWBtPzXX5F-y3-lhXxtwrAX6aVLPL2gOyA2Z5TS7ZdM4t-qk95g8LeqZQtD-FhqDj0NGrcbYcX8A1kMhvaocLofHja0WbO3Jg47kzAAEc7iXGWy_hBXq_sS1QZ-xRg4WtqHELB6ZgMwcHeZkq-dbF52B5lqhHrxawXPPKGAVbQybXB3_BqMgUzJq8dHnuTfQLZ04Lv7gR6K-A3qmN51-UfRYyEj4PXs0e4eB2Zu3rsbyBZuilzGCYO2uXAKB8mQDE83OpR29BxzlXJVUtYkqxHWujaxeckVgzLkQN12AsHwNa9szkIMIJMrIbBHGyx3AQ5HpZI2AK6ZSQKcJOCwDlZHZjswhlkjFpNkHGwXXQ4Ry_dWGXFjueSS6JcVpI9jrKQJDdlUsYhUp1UG8rctGEhb3tG6WS3CjTt0SJ1TB4Hh_JuyVbOxs1cbLvlZ5NCK4SBbJxxO-afiLgloJ2aiw2DHweyrF313KbEbfx3aTyb5opogWz_SfNmMtwLhOt9iRBmv7gJhsG4uC5RoRJXsBJkzZaF6fXN-TBCm-dgnvrOsVLze8OI_zE3f7Xl6UC5Uxu0M_fGiX96wNCfGlVfnF1hjWye9l7QN1xJ2ok-Zq9mc2A=w194-h224-no" alt="Profile pic">
@@ -40,7 +40,7 @@
       </div>
     </div><br><br>
 
-    <div class="container-fluid bg-3 text-center">
+    <div class="me container-fluid bg-3 text-center">
       <h3 id="work">Work</h3><br>
         <div class="row">
           <div class="col-sm-3">
