--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+    <script src="/portfolio.js" type="text/javascript"></script>
   </head>
 
   <body>
@@ -29,14 +30,11 @@
     </nav>
 
     <div class="me container-fluid bg-3 text-center" id="about">
-      <div class="row">
-        <div class="col-md-4">
-        <img class="img-circle img-responsive" src="https://lh3.googleusercontent.com/hw-UIY3fRhoxyB4np8Rs5mOmmV0iVVKtnqUEslMVSP7ab1WAfksxRn7KpPYfLlWBtPzXX5F-y3-lhXxtwrAX6aVLPL2gOyA2Z5TS7ZdM4t-qk95g8LeqZQtD-FhqDj0NGrcbYcX8A1kMhvaocLofHja0WbO3Jg47kzAAEc7iXGWy_hBXq_sS1QZ-xRg4WtqHELB6ZgMwcHeZkq-dbF52B5lqhHrxawXPPKGAVbQybXB3_BqMgUzJq8dHnuTfQLZ04Lv7gR6K-A3qmN51-UfRYyEj4PXs0e4eB2Zu3rsbyBZuilzGCYO2uXAKB8mQDE83OpR29BxzlXJVUtYkqxHWujaxeckVgzLkQN12AsHwNa9szkIMIJMrIbBHGyx3AQ5HpZI2AK6ZSQKcJOCwDlZHZjswhlkjFpNkHGwXXQ4Ry_dWGXFjueSS6JcVpI9jrKQJDdlUsYhUp1UG8rctGEhb3tG6WS3CjTt0SJ1TB4Hh_JuyVbOxs1cbLvlZ5NCK4SBbJxxO-afiLgloJ2aiw2DHweyrF313KbEbfx3aTyb5opogWz_SfNmMtwLhOt9iRBmv7gJhsG4uC5RoRJXsBJkzZaF6fXN-TBCm-dgnvrOsVLze8OI_zE3f7Xl6UC5Uxu0M_fGiX96wNCfGlVfnF1hjWye9l7QN1xJ2ok-Zq9mc2A=w194-h224-no" alt="Profile pic">
-        </div>
-        <div class="col-md-8">
+      <div class="row" id="main">
+
         <p class="lead about">
-        You like code. I like code. We all like code. <br>Ruby+Rails. Python+Django. HTML+CSS. JavaScript+jQuery.</p>
-      </div>
+        You like code.<br> I like code.<br> We all like code. <br><br>Ruby+Rails.<br> Python+Django. <br>HTML+CSS. <br>JavaScript+jQuery.</p>
+
       </div>
     </div><br><br>
 
