Spacing, padding, margins, etc.

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -40,7 +40,7 @@
       </div>
     </div><br><br>
 
-    <div class="container-fluid bg-3 text-center mid">
+    <div class="container-fluid bg-3 text-center mid little-me">
       <h3 id="work">Work</h3><br>
           <div class="card-columns">
 
@@ -69,29 +69,24 @@
     </div>
     <br><br>
 
-    <div class="container-fluid bg-3 text-center">
+    <div class="container-fluid bg-3 text-center littler-me">
       <h3>Contact Me</h3><br>
         <div class="row" id="contact">
           <div class="col-sm-4">
-
             <a href="https://twitter.com/dcstr0" class="twitter-follow-button" data-show-count="false">Follow @dcstr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
           </div>
 
           <div class="col-sm-4">
-
             <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dandcastro" data-format="click" data-related="false" data-text="Daniel Castro"></script>
           </div>
 
           <div class="col-sm-4">
-
             <a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a>
           </div>
+    </div>
+  </div>
 
-    </div><br><br>
-
-    <footer class="container-fluid text-center">
-       <p>&copy;2017</p>
-    </footer>
+       <div>&copy;2017</div>
 
     </body>
 </html>
