--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -54,14 +54,14 @@
               <div class="card col-sm-4">
                <img class="card-img-top img-fluid" src="/images/style.png" alt="Screenshot">
                <div class="card-block">
-                   <a href="https://brushstroke.herokuapp.com" class="btn btn-primary">StyleWrite</a>
+                   <a href="https://stylewrite.herokuapp.com" class="btn btn-primary">StyleWrite</a>
                </div>
               </div>
 
               <div class="card col-sm-4">
                <img class="card-img-top img-fluid" src="/images/weather.png" alt="Screenshot">
                <div class="card-block">
-                   <a href="https://brushstroke.herokuapp.com" class="btn btn-primary">Weather Station</a>
+                   <a href="https://wtrsttn.herokuapp.com" class="btn btn-primary">Weather Station</a>
                </div>
               </div>
 
