Updated Contact buttons

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <script src="https://use.fontawesome.com/d992dc7455.js"></script>
     <link rel="stylesheet" href="/portfolio.css">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -73,15 +74,15 @@
       <h3>Contact Me</h3><br>
         <div class="row" id="contact">
           <div class="col-sm-4">
-            <a href="https://twitter.com/dcstr0" class="twitter-follow-button" data-show-count="false">Follow @dcstr0</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a href="https://www.linkedin.com/in/dandcastro"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
           </div>
 
           <div class="col-sm-4">
-            <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/dandcastro" data-format="click" data-related="false" data-text="Daniel Castro"></script>
+            <a href="https://twitter.com/dcstr0"><i class="fa fa-twitter-square" aria-hidden="true"></i></a>
           </div>
 
           <div class="col-sm-4">
-            <a class="github-button" href="https://github.com/castrodd" data-size="large" aria-label="Follow @castrodd on GitHub">Follow @castrodd</a>
+            <a href="https://github.com/castrodd"><i class="fa fa-github" aria-hidden="true"></i></a>
           </div>
     </div>
   </div>
