--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -68,24 +68,23 @@
 
     </div>
     </div>
-  
+
 
     <div class="container-fluid bg-3 text-center littler-me">
       <div class="container">
-        <form id="contact" action="" method="post">
+        <form id="contact" action="/portfolio" method="post">
           <h3>Contact Me</h3>
           <fieldset>
-            <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+            <input placeholder="Your name" type="text" tabindex="1" name="name" required autofocus>
           </fieldset>
           <fieldset>
-            <input placeholder="Your Email Address" type="email" tabindex="2" required>
-          </fieldset>
-
-          <fieldset>
-            <textarea placeholder="Type your Message Here...." tabindex="5" required></textarea>
+            <input placeholder="Your Email Address" type="email" tabindex="2" name="email" required>
           </fieldset>
           <fieldset>
-            <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
+            <textarea placeholder="Type your Message Here...." tabindex="5" name="message" required></textarea>
+          </fieldset>
+          <fieldset>
+            <input type="submit" id="contact-submit">
           </fieldset>
         </form>
       </div>
