--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -75,13 +75,13 @@
         <form id="contact" action="/portfolio" method="post">
           <h3>Contact Me</h3>
           <fieldset>
-            <input placeholder="Your name" type="text" tabindex="1" name="name" required autofocus>
+            <input placeholder="Your Name" type="text" tabindex="1" name="name" required autofocus>
           </fieldset>
           <fieldset>
-            <input placeholder="Your Email Address" type="email" tabindex="2" name="email" required>
+            <input placeholder="Your Email" type="email" tabindex="2" name="email" required>
           </fieldset>
           <fieldset>
-            <textarea placeholder="Type your Message Here...." tabindex="5" name="message" required></textarea>
+            <textarea placeholder="Your Message" tabindex="5" name="message" required></textarea>
           </fieldset>
           <fieldset>
             <input type="submit" id="contact-submit">
@@ -104,7 +104,7 @@
           </div>
     </div>
 
-       <div>&copy;2017</div>
+       <div id="final">&copy;2017</div>
 
     </body>
 </html>
