--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -41,10 +41,9 @@
       </div>
     </div><br><br>
 
-    <div class="container-fluid bg-3 text-center mid little-me">
-      <h3 id="work">Work</h3><br>
+    <div class="container-fluid bg-3 text-center mid little-me" id="work">
+      <br><h3 id="midhead">Work</h3><br>
           <div class="card-columns">
-
               <div class="card col-sm-4">
                <img class="card-img-top img-fluid" src="/images/brushstroke.png" alt="Screenshot">
                <div class="card-block">
@@ -84,7 +83,7 @@
             <textarea placeholder="Your Message" tabindex="5" name="message" required></textarea>
           </fieldset>
           <fieldset>
-            <input type="submit" id="contact-submit">
+            <input class="btn btn-primary" type="submit" id="contact-submit">
           </fieldset>
         </form>
       </div>
