--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -74,13 +74,13 @@
         <form id="contact" action="/portfolio" method="post">
           <h3>Contact Me</h3>
           <fieldset>
-            <input placeholder="Your Name" type="text" tabindex="1" name="name" required autofocus>
+            <input placeholder="Your Name" type="text" tabindex="1" name="name">
           </fieldset>
           <fieldset>
-            <input placeholder="Your Email" type="email" tabindex="2" name="email" required>
+            <input placeholder="Your Email" type="email" tabindex="2" name="email">
           </fieldset>
           <fieldset>
-            <textarea placeholder="Your Message" tabindex="5" name="message" required></textarea>
+            <textarea placeholder="Your Message" tabindex="5" name="message"></textarea>
           </fieldset>
           <fieldset>
             <input class="btn btn-primary" type="submit" id="contact-submit">
