Fixed main div text size

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -32,11 +32,17 @@
       </div>
     </nav>
 
+
     <div class="me container-fluid bg-3 text-center mandelbrot" id="about">
       <div class="row" id="main">
 
-        <p class="lead about">
-        You like code.<br> I like code.<br> We all like code. <br><br>Ruby+Rails.<br> Python+Django. <br>HTML+CSS. <br>JavaScript+jQuery.</p>
+        <h1 class="lead about" id="fit">You like code.</h1>
+        <h1 class="lead about" id="fit">I like code.</h1>
+        <h1 class="lead about" id="fit">We all like code. </h1>
+        <h1 class="lead about" id="fit">Ruby+Rails.</h1>
+        <h1 class="lead about" id="fit">Python+Django. </h1>
+        <h1 class="lead about" id="fit">HTML+CSS. </h1>
+        <h1 class="lead about" id="fit">JavaScript+jQuery.</h1>
 
       </div>
     </div><br><br>
