Fixing padding/margins

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -76,7 +76,7 @@
 
 
     <div class="container-fluid bg-3 text-center littler-me">
-      <div class="container">
+      <div class="container contact">
         <form id="contact" action="/portfolio" method="post">
           <h3>Contact Me</h3>
           <fieldset>
